# super-dial-motor-knob-screen

./: .gitignore  CLAUDE.md  SuperDial电机旋钮屏V2_Bom.xlsx  readme.md  新3205B电机SuperDial_Bom.xlsx
3D打印和CNC模型-by虫二/: 3205b电机适配器_淘宝买3205b无限位会送.txt  3205b适配器.STEP
idf_code/: sdkconfig  sdkconfig.defaults
idf_code/main/: CMakeLists.txt  main.c
idf_code/main/dial/: dial.h
idf_code/main/dial_power/: dial_power.c  dial_power.h
idf_code/main/display/: display.c  display.h
idf_code/main/nvs_data/: nvs_data.c  nvs_data.h
idf_code/main/sntp_time/: sntp_time.c  sntp_time.h
idf_code/main/spiffs_init/: spiffs_init.c  spiffs_init.h
idf_code/main/ui/: ui.c  ui.h
idf_code/main/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen_Clock.c  ui_Screnn3.c
idf_code/main/usb_device/: esp_hidd_prf_api.c  usb_device.h
idf_code/main/wifi/: web_config_preview.html  web_html.h  web_server.c  web_server.h  wifi_config.c  wifi_config.h
main/: Watchdog.h  display_task.h  interface.h  main.ino  motor_task.h  smileysans.c  ui.c  ui.h
old_main弃用/: main.ino
pc_sim/: CMakeLists.txt  README.md  lv_conf.h  main.c  pc_sim_stubs.c
pc_sim/stubs/: esp_app_desc.h  esp_check.h  esp_heap_caps.h  esp_log.h  esp_lvgl_port.h
pc_sim/stubs/class/hid/: hid_device.h
pc_sim/stubs/freertos/: FreeRTOS.h  task.h
